Agregado el modo ciego con lector de voz de google chrome, arreglado una validacion en el nombre

--- a/index_ciego.html
+++ b/index_ciego.html
@@ -5,6 +5,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Formulario CILSA en modo ciego</title>
 	</head>
-	<body></body>
-	<script type="module" src="./js/modo_ciego/TTS.js"></script>
+	<body>
+		<script type="module" src="./js/modo_ciego/app.js"></script>
+		<input id="input_user" type="text" />
+		<!-- El input_validar se usa para capturar la confirmación con enter o el cacelado con la tecla de borrado -->
+		<input id="input_confirmacion" type="text" disabled />
+	</body>
 </html>
