cambio de ruta base

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="./assets/styles/menu.css" />
 		<link rel="stylesheet" href="./assets/styles/form_ok.css" />
 		<link rel="stylesheet" href="./assets/styles/mode_select.css" />
+		<link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
 		<title>Formulario CILSA</title>
 	</head>
 	<body>
