--- a/index_ciego.html
+++ b/index_ciego.html
@@ -3,7 +3,11 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
+		<link
+			rel="shortcut icon"
+			href="/ejercicioFormCILSA/favicon.png"
+			type="image/x-icon"
+		/>
 		<title>Formulario CILSA en modo ciego</title>
 	</head>
 	<body>
